--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "HerbalHaven_Prot.sln"
+    "dotnet.defaultSolution": "Thesis-Integration.sln"
 }
